# adk-samples

./: .gitignore
python/agents/genetic-health-coach/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
python/agents/genetic-health-coach/genetic_health_coach/: __init__.py  agent.py  cli.py  prompt.py  subjects.py  webapp.py
python/agents/genetic-health-coach/genetic_health_coach/tools/: __init__.py  persistence.py  subject_analysis.py  vcf_parser.py
python/agents/genetic-health-coach/sample_data/: example_annotated.vcf
python/agents/genetic-health-coach/tests/: test_cli.py  test_tools.py  test_webapp.py
python/agents/live-lyrics-translator/: README.md  main.py  requirements.txt
python/agents/live-lyrics-translator/live_lyrics_translator/: __init__.py  aligner.py  app.py  audio_listener.py  lyrics_provider.py  translation.py
python/agents/nutrigenomics-rag/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
python/agents/nutrigenomics-rag/nutrigenomics_rag/: __init__.py  agent.py  prompts.py
python/agents/nutrigenomics-rag/nutrigenomics_rag/shared_libraries/: __init__.py  prepare_corpus_and_data.py
python/agents/nutrigenomics-rag/streamlit_runner/: longevity_assistant.py
python/agents/nutrigenomics-rag/streamlit_runner/src/: app.py
python/agents/nutrigenomics-rag/streamlit_runner/src/data/: .gitignore
python/agents/nutrigenomics-rag/tests/: __init__.py
python/agents/nutrigenomics-rag/tools/: export_bundle.py
